styles.css
/* Pallete: https://coolors.co/f7fff7-343434-ef767a-ffe66d-7d7abc */

body {
    /* Appearance */
    font-family: sans-serif;
    background-color: #343434;
    color: #F7FFF7;

    /* Flexbox */
    display: flex;
    align-items: center;
    flex-direction: column;

    /* Alignment */
    text-align: center;
}

.heading {
    /* Positioning */
    margin-top: 64px;
    font-size: 40px;
}

.option-container {
    /* Flexbox */
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    /* Positioning */
    gap: 16px;
}

.option {
    /* Appearance */
    border: 2px solid #F7FFF7;
    border-radius: 6px;
    background-color: #343434;
    color: #F7FFF7;

    /* Flexbox */
    flex: 1 1 0px;

    /* Positioning */
    min-width: 128px;
    max-width: 128px;
    aspect-ratio: 1;
    font-size: 64px;

    /* Animation */
    transition: all 100ms linear;
}

.option:hover {
    /* Cursor */
    cursor: pointer;

    /* Appearance */
    filter: brightness(105%);
    transform: scale(102.5%);
}

.score-container {
    /* Flexbox */
    display: flex;
    flex-direction: row;

    /* Positioning */
    gap: 8px;
    margin-bottom: 16px;
}

.scorecard {
    /* Flexbox */
    flex: 1 1 0px;

    /* Apearance */
    border: 2px solid #F7FFF7;
    border-radius: 6px;

    /* Potisioning */
    min-width: 200px;
    max-width: 200px;
    box-sizing: border-box;
    padding: 16px;
}

.scorecard .name,
.scorecard .score {
    /* Positioning */
    margin: 0;
}

.scorecard .score {
    /* Typography */
    font-size: 20px;
    font-weight: bold;

    /* Positioning */
    margin-top: 8px;
}

.message-container {
    /* Typography */
    font-size: 24px;

    /* Appearance */
    border: 2px solid #F7FFF7;
    border-radius: 6px;

    /* Positioning */
    margin-top: 16px;
    box-sizing: border-box;

    /* Dimensions */
    width: 416px;
    padding: 16px;
}

.description {
    /* Positioning */
    margin: 0;
}

